[gd_scene load_steps=71 format=3 uid="uid://bqckh34uy7swg"]

[ext_resource type="Texture2D" uid="uid://dwgq6yvjsrvr7" path="res://assets/sprites/boss.png" id="1_dlmty"]
[ext_resource type="Script" uid="uid://tkp8wfahb1r1" path="res://scripts/boss.gd" id="1_neq0i"]
[ext_resource type="PackedScene" uid="uid://cjnl6nh8dbmwv" path="res://scenes/health_bar.tscn" id="3_jncid"]
[ext_resource type="AudioStream" uid="uid://cs4lfamnc167f" path="res://sounds/hurt.wav" id="4_n725y"]
[ext_resource type="AudioStream" uid="uid://bmugm0lvlby4g" path="res://sounds/explosion.wav" id="5_mh6p8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_neq0i"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jncid"]
atlas = ExtResource("1_dlmty")
region = Rect2(288, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnbj4"]
atlas = ExtResource("1_dlmty")
region = Rect2(576, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3bxh"]
atlas = ExtResource("1_dlmty")
region = Rect2(864, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqpjq"]
atlas = ExtResource("1_dlmty")
region = Rect2(1152, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cdgk"]
atlas = ExtResource("1_dlmty")
region = Rect2(1440, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsl3t"]
atlas = ExtResource("1_dlmty")
region = Rect2(1728, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avx2"]
atlas = ExtResource("1_dlmty")
region = Rect2(2016, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f346"]
atlas = ExtResource("1_dlmty")
region = Rect2(2304, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0onds"]
atlas = ExtResource("1_dlmty")
region = Rect2(2592, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfs1x"]
atlas = ExtResource("1_dlmty")
region = Rect2(2880, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eiau"]
atlas = ExtResource("1_dlmty")
region = Rect2(3168, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn2fc"]
atlas = ExtResource("1_dlmty")
region = Rect2(3456, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqd3i"]
atlas = ExtResource("1_dlmty")
region = Rect2(3744, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_mautr"]
atlas = ExtResource("1_dlmty")
region = Rect2(4032, 320, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho3mf"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7apjh"]
atlas = ExtResource("1_dlmty")
region = Rect2(288, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh5fr"]
atlas = ExtResource("1_dlmty")
region = Rect2(576, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dlq0"]
atlas = ExtResource("1_dlmty")
region = Rect2(864, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_25au8"]
atlas = ExtResource("1_dlmty")
region = Rect2(1152, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk50o"]
atlas = ExtResource("1_dlmty")
region = Rect2(1440, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_325t2"]
atlas = ExtResource("1_dlmty")
region = Rect2(1728, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bagrn"]
atlas = ExtResource("1_dlmty")
region = Rect2(2016, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3gxo"]
atlas = ExtResource("1_dlmty")
region = Rect2(2304, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dd2w"]
atlas = ExtResource("1_dlmty")
region = Rect2(2592, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj5kv"]
atlas = ExtResource("1_dlmty")
region = Rect2(2880, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1yhm"]
atlas = ExtResource("1_dlmty")
region = Rect2(3168, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbxxu"]
atlas = ExtResource("1_dlmty")
region = Rect2(3456, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyxkr"]
atlas = ExtResource("1_dlmty")
region = Rect2(3744, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhysf"]
atlas = ExtResource("1_dlmty")
region = Rect2(4032, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_g25uh"]
atlas = ExtResource("1_dlmty")
region = Rect2(4320, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4ffm"]
atlas = ExtResource("1_dlmty")
region = Rect2(4608, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lngmi"]
atlas = ExtResource("1_dlmty")
region = Rect2(4896, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_q24ql"]
atlas = ExtResource("1_dlmty")
region = Rect2(5184, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2c66"]
atlas = ExtResource("1_dlmty")
region = Rect2(5472, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_giyuy"]
atlas = ExtResource("1_dlmty")
region = Rect2(5760, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqmr5"]
atlas = ExtResource("1_dlmty")
region = Rect2(6048, 640, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1tdt"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm5ke"]
atlas = ExtResource("1_dlmty")
region = Rect2(288, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymkos"]
atlas = ExtResource("1_dlmty")
region = Rect2(576, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6qm0"]
atlas = ExtResource("1_dlmty")
region = Rect2(864, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mrsh"]
atlas = ExtResource("1_dlmty")
region = Rect2(1152, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft6lg"]
atlas = ExtResource("1_dlmty")
region = Rect2(1440, 0, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueo3c"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_863od"]
atlas = ExtResource("1_dlmty")
region = Rect2(288, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh7ji"]
atlas = ExtResource("1_dlmty")
region = Rect2(576, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3xpi"]
atlas = ExtResource("1_dlmty")
region = Rect2(864, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w2ut"]
atlas = ExtResource("1_dlmty")
region = Rect2(1152, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_es0rk"]
atlas = ExtResource("1_dlmty")
region = Rect2(1440, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq7oa"]
atlas = ExtResource("1_dlmty")
region = Rect2(1728, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gqtx"]
atlas = ExtResource("1_dlmty")
region = Rect2(2016, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6jog"]
atlas = ExtResource("1_dlmty")
region = Rect2(2304, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_02csv"]
atlas = ExtResource("1_dlmty")
region = Rect2(2592, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_te2y6"]
atlas = ExtResource("1_dlmty")
region = Rect2(2880, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbhct"]
atlas = ExtResource("1_dlmty")
region = Rect2(3168, 160, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajbp4"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_en4il"]
atlas = ExtResource("1_dlmty")
region = Rect2(288, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_efibt"]
atlas = ExtResource("1_dlmty")
region = Rect2(576, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_tphtu"]
atlas = ExtResource("1_dlmty")
region = Rect2(864, 480, 288, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoae0"]
atlas = ExtResource("1_dlmty")
region = Rect2(1152, 480, 288, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_1wya7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_neq0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jncid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnbj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3bxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqpjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cdgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsl3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f346")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0onds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfs1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eiau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn2fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqd3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mautr")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho3mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7apjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh5fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dlq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25au8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk50o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_325t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bagrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3gxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dd2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj5kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1yhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbxxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyxkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhysf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g25uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4ffm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lngmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q24ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2c66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giyuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqmr5")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1tdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm5ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymkos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6qm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mrsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft6lg")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueo3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_863od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh7ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3xpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w2ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es0rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq7oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gqtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6jog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02csv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te2y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbhct")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajbp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en4il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efibt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tphtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoae0")
}],
"loop": false,
"name": &"take_damage",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dlmty"]
radius = 21.0
height = 72.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_neq0i"]
size = Vector2(400, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jncid"]
size = Vector2(71, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnbj4"]
size = Vector2(90, 76)

[node name="boss" type="CharacterBody2D"]
script = ExtResource("1_neq0i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -79)
sprite_frames = SubResource("SpriteFrames_1wya7")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -35)
shape = SubResource("CapsuleShape2D_dlmty")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -52.5)
shape = SubResource("RectangleShape2D_neq0i")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(2.5, -35)
shape = SubResource("RectangleShape2D_jncid")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-79, -38)
shape = SubResource("RectangleShape2D_qnbj4")

[node name="health_bar" parent="." instance=ExtResource("3_jncid")]
offset_left = -81.0
offset_top = -119.0
offset_right = 78.0
offset_bottom = -113.0

[node name="Hurt SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n725y")
volume_db = 3.0
pitch_scale = 1.5
bus = &"SFX"

[node name="Death SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_mh6p8")
volume_db = 3.0
pitch_scale = 1.5
bus = &"SFX"
